Table mesure {
  valeur ssqa.mesure_valeur [null]
  station ssqa.station_code [not null]
  moment ssqa.estampille [not null]
  variable ssqa.variable_code [not null]

  Indexes {
    (station, moment, variable) [pk, name: 'Mesure_cc0']
  }
  Note: '\
  If mesure.valeur is null, then it must have a tuple in erreur_mesure. 
  Value of "variable", must appear in table "capacite", for this "station". 
  '
}
Ref Mesure_cr0: mesure.(station, variable) - capacite.(station, variable)

Table erreur_mesure {
  station ssqa.station_code [not null]
  moment ssqa.estampille [not null]
  variable ssqa.variable_code [not null]
  erreur_mesure_code ssqa.erreur_mesure_code_code [not null]

  Indexes {
    (station, moment, variable, erreur_mesure_code) [pk, name: 'Erreur_mesure_cc0']
  }
}
Ref Erreur_mesure_cr0: erreur_mesure.(station, moment, variable) - mesure.(station, moment, variable)
Ref Erreur_mesure_cr1: erreur_mesure.erreur_mesure_code - erreur_mesure_code.code

Table erreur_mesure_code {
  code ssqa.erreur_mesure_code_code [not null]
  description ssqa.erreur_mesure_code_description [not null]

  Indexes {
    code [pk, name: 'Erreur_mesure_code_cc0']
  }
}

Table capacite {
  station ssqa.station_code [not null]
  variable ssqa.variable_code [not null]

  Indexes {
    (station, variable) [pk, name: 'Capacite_cc0']
  }
}
Ref Capacite_cr0: capacite.station - station.code
Ref Capacite_cr1: capacite.variable - variable.code

Table station {
  code ssqa.station_code [not null]
  debut_service ssqa.estampille [not null]
  fin_service ssqa.estampille [null]
  mobilite ssqa.boolean [not null]

  Indexes {
    code [pk, name: 'Station_cc0']
  }
}

Table station_nom {
  code ssqa.station_code [not null]
  nom ssqa.station_nom [not null]

  Indexes{
    code [pk, name: 'Station_nom_cc0']
  }
}
Ref Station_nom_cr0: station_nom.code - station.code

Table position {
  longitude ssqa.longitude [not null]
  latitude ssqa.latitude [not null]
  altitude ssqa.altitude [not null]
  station ssqa.station_code [not null]
  debut ssqa.estampille [not null]
  fin ssqa.estampille [null]

  Indexes {
    (station, debut) [pk, name:'Position_cc0']
  }
  Note: 'station.debut_service <= position.debut < position.fin <= station.fin_service'
}
Ref Position_cr0: position.station - station.code

Table distribution {
  territoire ssqa.territoire_code [not null]
  station ssqa.station_code [not null]

  Indexes {
    (territoire, station) [pk, name: 'Distribution_cc0']
  }
}
Ref Distribution_cr0: distribution.station - station.code
Ref Distribution_cr1: distribution.territoire - territoire.code

Table territoire {
  nom ssqa.territoire_nom [not null]
  code ssqa.territoire_code [not null]

  Indexes {
    code [pk, name: 'Territoire_cc0']
    nom [unique, name: 'Territoire_cc1']
  }
}

Table variable {
  nom ssqa.variable_nom
  unite ssqa.unite_symbole
  valref ssqa.mesure_valeur
  methode ssqa.methode_codification_code
  code ssqa.variable_code

  Indexes {
    code [pk, name: 'Variable_cc0']
    nom [unique, name: 'Variable_cc1']
  }
}
Ref Variable_cr0: variable.unite - unite.sym

Table validation {
  min ssqa.mesure_valeur
  max ssqa.mesure_valeur
  variable ssqa.variable_code
  norme ssqa.norme_code

  Indexes {
    (variable, norme) [pk, name: 'Seuils_cc0']
  }
}
Ref Seuils_cr0: validation.variable - variable.code
Ref Seuils_cr1: validation.norme - norme.code
// constraint Seuils_min_max check (min <= max)

Table norme {
  titre ssqa.norme_titre
  code ssqa.norme_code

  Indexes {
    code [pk, name: 'Norme_cc0']
    titre [unique, name: 'Norme_cc1']
  }
}

Table exigence {
  variable ssqa.variable_code
  periode_valeur ssqa.mesure_valeur
  periode_unite ssqa.unite_symbole
  min ssqa.mesure_valeur
  max ssqa.mesure_valeur
  norme ssqa.norme_code
  code ssqa.exigence_code

  Indexes {
    (norme, code) [pk, name: 'Exigence_cc0']
    (norme, variable, periode_unite, periode_valeur) [unique, name: 'Exigence_cc1']
  }
}
Ref Exigence_cr0: exigence.variable - variable.code
Ref Exigence_cr1: exigence.norme - norme.code
Ref Exigence_cr2: exigence.(periode_unite) - unite.sym
// constraint Exigence_min_max check (min <= max)

Table unite {
  nom ssqa.unite_nom
  sym ssqa.unite_symbole
  mult ssqa.double
  add ssqa.double

  Indexes {
    sym [pk, name: 'Unite_cc0']
    nom [unique, name: 'Unite_cc1']
  }
}

Table composition_unite{
  symbole_unite_composite ssqa.unite_symbole
  symbole_unite_fondamentale ssqa.unite_symbole
  exposant ssqa.tinyint

  Indexes{
    (symbole_unite_composite, symbole_unite_fondamentale) [pk, name: 'Composition_unite_cc0']
  }
}
Ref Composition_unite_cr0: unite_fond.symbole - composition_unite.symbole_unite_fondamentale
Ref Composition_unite_cr1: composition_unite.symbole_unite_composite - unite.sym

Table unite_fond{
  nom ssqa.unite_nom
  symbole ssqa.unite_symbole

  Indexes {
    (symbole) [pk, name: 'Unite_fond_cc0']
  }
}

Table hors_service {
  station ssqa.station_code [not null]
  debut ssqa.estampille [not null]
  fin ssqa.estampille [not null]
  nature ssqa.hors_service_code [not null]

  Indexes {
    (station, debut, nature) [pk, name: 'Hors_service_cc0']
  }
  Note: 'station.debut_service < hors_service.debut < hors_service.fin < station.fin_service'
}
Ref Hors_service_cr0: hors_service.station - station.code
Ref Hors_service_cr1: hors_service.nature - nature_hors_service.code

Table nature_hors_service {
  code ssqa.hors_service_code [not null]
  description ssqa.description_hors_service [not null]

  Indexes {
    code [pk, name: 'Nature_hors_service_cc0']
  }
}

Table immatriculation {
  station ssqa.station_code
  immatriculation ssqa.immatriculation

  Indexes {
    station [pk, name: 'Immatriculation_cc0']
  }
}
Ref Immatriculation_cr0: immatriculation.station - station.code